# TaskTracker

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  package.json  pnpm-lock.yaml  tasksFile.json  vcpkg.json
deb/: tasktrackercli_1.0.0.deb
deb/tasktrackercli_1.0.0/DEBIAN/: control  postinst
include/: tasks.hpp  tasksManager.hpp
src/: main.cpp  tasksManager.cpp
tests/: test.cpp  test.sh
